Improved component import styling.

--- a/templates/components/component_library.html
+++ b/templates/components/component_library.html
@@ -25,7 +25,7 @@
             <a href="{{ project.get_absolute_url }}" style="color: black;">Component Library</a>
           </h2>
       </div>
-      <div style="float: right; margin: 0 0.5em 0em 5em;">
+      <div style="float: right;">
         <button id="component-import-oscal" class="btn btn-success" onclick="show_import_component_modal(); return false;" href="#" ">Import OSCAL Component</button>
       </div>
     </div>
