--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -280,6 +280,10 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 /* controls */
 .index-catalog-top { margin-top: 30px; }
 
+/* Component Importer */
+#component-import-oscal { margin-top: 1em; }
+form #id_json_content { width: 100%; overflow: auto !important; } /* The !important is to fix a bug with textareas not allowing scrolling. */
+
 /* org groups */
 
 .new-org-col { margin: 40px 0px 30px 0px; }
