fixing force refresh button

--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -62,7 +62,7 @@
                 Available documents
               </a>
               <div class="pull-right">
-                <a id="force-refresh" class="btn btn-success btn-sm" onclick="refresh_output_doc({{project.root_task.module.app.id}});return false;"><span class="glyphicon glyphicon-refresh"></span> Force Refresh</a>
+                <a id="force-refresh" class="btn btn-success btn-refresh" onclick="refresh_output_doc({{project.root_task.module.app.id}});return false;"><span class="glyphicon glyphicon-refresh"></span> Force Refresh</a>
               </div>
             </h4>
           </div>
