Further fix to download JSON output docs
Set JSON MIME type to `application/x-json`.

**BREAKING CHANGE**

Under development output document formats `oscal_json`, `oscal_yaml`,
and `oscal_xml` are now replaced with `json`, `yaml`, and `xml` respectively.

Format `xml` still under development and not recommended for regular use.

Formats for `json` and `yaml` now support new Jinja2-like tags to enable
parameter substituion and loops inside those formats while Django handles
them as Python objects:

%for
%loop

%if
%then

{{ param }}

Example:

```
{ "title" : "{{project.system_info.system_name}}",
"published" : "2020-07-01T00:00:00.00-04:00",
"last-modified" : "2020-07-01T00:00:00.00-04:00",
"version" : "0.0",
"oscal-version" : "1.0-Milestone3",
"new-control-stuff": {
  "%for": "control in system.root_element.selected_controls_oscal_ctl_ids",
  "%loop": {
    "%if": "control.lower() in control_catalog",
    "%then":  {
      "uuid": "{{ system.control_implementation_as_dict[control]['elementcontrol_uuid'] }}",
      "control-id": "{{ control.lower() }}",
      "by-component": {
        "%for": "smt in system.control_implementation_as_dict[control]['control_impl_smts']",
        "%loop": {
          "key": "{{ smt.producer_element.uuid }}",
          "value": { "uuid" : "{{ smt.uuid }}",
            "component-name": "{{   smt.producer_element.name|safe }}",
            "description" : "{{ smt.body|safe }}"
          }
        }
      }
    }
  }
}
```

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -46,6 +46,7 @@ h3 { font-size: 18px; }
 
 .btn { white-space: normal; font-size: inherit; }
 .btn.btn-sm { font-size: 12px; }
+.btn.btn-xs { font-size: 12px; }
 
 footer { margin-top:60px;
   font-size: .75em;
