--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -28,13 +28,6 @@
             <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> > Selected Components
           </h2>
       </div>
-      <!-- Control Lookup-->
-      <div class="systems-control-lookup">
-          <!-- <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
-            <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
-                <button type="submit" class="btn btn-success">Look up</button>
-          </form> -->
-      </div>
     </div>
   </div><!--/row-->
     <p>&nbsp;</p>
@@ -62,7 +55,9 @@
               <label for="compoment">Add component</label>&nbsp;&nbsp;
                 <select class="producer_element_id" id="producer_element_id" name="producer_element_id" style="width:340px;">
                   {% for component in elements %}
-                  <option value="{{ component.id }}">{{ component.name }}</option>
+                    {% if component not in system.producer_elements %}
+                      <option value="{{ component.id }}">{{ component.name }}</option>
+                    {% endif %}
                   {% endfor %}
                 </select>
           </div>
