Hide element_type field in add component form
Various small improvements and fixes to the add component form
for creating a new component in the component library.

Make the `element_type` field hidden and preset to `system_element`.

Adjust some indenting on a function.

Remove an unnecessary else block on ValidationError to let
Django forms do the ValidationErrof builtin routing.

Use add existing component selection element_id instead of element_class
to use Select2.

--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -79,10 +79,10 @@
 <script>
   // Convert select field for Add Component to jQuery Select2 box
   $(document).ready(function() {
-    $('.producer_element_id').select2();
+    $('#producer_element_id').select2();
   });
   // Submit the add_component form when selection changed
-  $('.producer_element_id').on("select2:select", function(e) {
+  $('#producer_element_id').on("select2:select", function(e) {
     document.getElementById('add_component').submit();
   });
 </script>
