--- a/templates/components/element_form.html
+++ b/templates/components/element_form.html
@@ -2,7 +2,7 @@
 {% load bootstrap3 %}
 
 {% block title %}
-Create System Element (AKA Component)
+Create System Element (a.k.a. Component)
 {% endblock %}
 
 {% block body-wide %}
