Create new component in component library (#1186)
* Add ElementForm for creating new components (AKA elements)

Add Django form, route, view, and template for creating a new
component (AKA element) in the component library.

* Adjust button position on component library

* Polish add_component to selected_components

Polish the UI for adding a component to a system's
selected components. Improve the text of the messages.
Make sure the Select2 selection box automatically submits
the form to add component upon selection.

* Update forms.py

Provide the default value system_element for element_type.

* Import ValidationError, fix title of create component/element

Fix small bugs with the form for creating a new element/component
in the component library:
- Add import of ValidationError
- Change page title to something better in template

* Update forms.py

ValidationError is missing import

* Update views.py

Optimized imports.

* Update views.py

Return validation error is the form was not valid

* Hide element_type field in add component form

Various small improvements and fixes to the add component form
for creating a new component in the component library.

Make the `element_type` field hidden and preset to `system_element`.

Adjust some indenting on a function.

Remove an unnecessary else block on ValidationError to let
Django forms do the ValidationErrof builtin routing.

Use add existing component selection element_id instead of element_class
to use Select2.

* Improve `create_instance_from_prototype` method

Improve check to make sure we are not duplicate assigning
a control_implementation statement to a system component.

* Typo fix. Move add component form submission online.

Fixed a spelling error of 'component'.
Moved the add component form submit to add a component
to a system to the onchange because that is clearer to developers.

Co-authored-by: Greg Elin <greg.elin@govready.com>
Co-authore

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -281,8 +281,9 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 /* controls */
 .index-catalog-top { margin-top: 30px; }
 
-/* Component Importer */
-#component-import-oscal { margin-top: 1em; }
+/* Component Library */
+#component-new, #component-import-oscal { margin-top: 0em; }
+
 form #id_json_content { width: 100%; overflow: auto !important; } /* The !important is to fix a bug with textareas not allowing scrolling. */
 
 /* org groups */
