--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -48,12 +48,13 @@
     {% endfor %}
 
     <div id="tab-content" class="row row-control" style="">
-      <form class="form-inline" method="post" action="/systems/{{ system.id }}/components/add_system_component">
+      <form id="add_component" class="form-inline" method="post" action="/systems/{{ system.id }}/components/add_system_component">
         {% csrf_token %}
         <div id="" class="col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7">
           <div class="form-group">
               <label for="compoment">Add component</label>&nbsp;&nbsp;
-                <select class="producer_element_id" id="producer_element_id" name="producer_element_id" style="width:340px;">
+                <!-- NOTE: Selection box converts to a Select2 selection box via script at bottom of page -->
+                <select class="producer_element_id" id="producer_element_id" name="producer_element_id" onchange="$(form).submit();" style="width:340px;">
                   {% for component in elements %}
                     {% if component not in system.producer_elements %}
                       <option value="{{ component.id }}">{{ component.name }}</option>
@@ -61,9 +62,6 @@
                   {% endfor %}
                 </select>
           </div>
-        </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-          <button type="submit" class="btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add</button>
         </div>
       </div>
     </div>
@@ -82,7 +80,7 @@
 <script>
   // Convert select field for Add Component to jQuery Select2 box
   $(document).ready(function() {
-      $('.producer_element_id').select2();
+    $('#producer_element_id').select2();
   });
 </script>
 
