--- a/templates/components/import-component-modal.html
+++ b/templates/components/import-component-modal.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div id="import_component_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -5,7 +6,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="invitation_modal_title">Import OSCAL Component</h4>
       </div>
-      <form id="" action="{% url 'import_component' %}" role="form" method="POST">{% csrf_token %}
+      <form id="component_import_form" action="{% url 'import_component' %}" onsubmit="show_spinner();" role="form" method="POST">{% csrf_token %}
         <div class="modal-body">
           <label for="{{import_form.file.id_auto}}">{{ import_form.file.label }}:</label>
           {{ import_form.file }}
@@ -13,9 +14,10 @@
           <label for="{{import_form.json_content.id_auto}}">{{ import_form.json_content.label }}:</label>
           <br>
           {{ import_form.json_content }}
-         <div class="modal-footer">
-           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-           <input id="import_component_submit" class="btn btn-success btn-submit" type="submit" value="Import" />
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <input id="import_component_submit" class="btn btn-success btn-submit" type="submit" value="Import" />
+            <img id="import_loading_spinner" src="{% static "img/icons/spinner.gif" %}" />
           </div>
         </form>
       </div>
@@ -27,6 +29,7 @@
 <script>
   function show_import_component_modal(callback) {
     var m = $('#import_component_modal');
+    $("#import_loading_spinner").hide();
     m.modal();
   }
   function fillJSONContent(file) {
@@ -36,6 +39,10 @@
     reader.onload = function(e) {
         $('#{{import_form.json_content.auto_id}}').val(e.target.result);
     };
+  }
+
+  function show_spinner() {
+    $("#import_loading_spinner").show();
   }
 </script>
 {% endblock %}
