--- a/templates/portfolios/manage_portfolio_modal.html
+++ b/templates/portfolios/manage_portfolio_modal.html
@@ -12,8 +12,8 @@
           {{ project_form.portfolio }}
          </div>
          <div class="modal-footer">
-           <button id="edit_portfolio_submit" class="btn btn-success btn-submit" type="submit" href="/portfolios/{{portfolio.id}}/edit">Edit</button>
-           <button id="delete_portfolio_submit" href="portfolios/2/delete" class="btn btn-danger btn-submit confirm-delete" type="submit" onclick="return confirm('Are you sure you want to delete this?')">Delete Portfolio</button>
+           <a id="edit_portfolio_submit" class="btn btn-success btn-submit" type="submit">Edit</a>
+           <a id="delete_portfolio_submit"  class="btn btn-danger btn-submit confirm-delete" type="submit" onclick="return confirm('Are you sure you want to delete this?')">Delete Portfolio</a>
            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
          </div>
         </form>
@@ -24,13 +24,12 @@
 
 {% block scripts %}
 <script>
-  function show_manage_portfolio_modal(callback) {
+  function show_manage_portfolio_modal(id,callback) {
     var m = $('#manage_portfolio_modal');
     m.modal();
+    $("#edit_portfolio_submit").attr("href", "/portfolios/"+id+"/edit");
+    $("#delete_portfolio_submit").attr("href", "/portfolios/"+id+"/delete");
   }
 
-  $(document).on('click', '.confirm-delete', function(){
-    return confirm('Are you sure you want to delete this?');
-})
 </script>
 {% endblock %}
