--- a/templates/components/import-component-modal.html
+++ b/templates/components/import-component-modal.html
@@ -5,6 +5,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="invitation_modal_title">Import OSCAL Component</h4>
+        <a href="/controls/import_records">Manage Import Records</a>
       </div>
       <form id="component_import_form" action="{% url 'import_component' %}" onsubmit="show_spinner();" role="form" method="POST">{% csrf_token %}
         <div class="modal-body">
