--- a/templates/project_settings.html
+++ b/templates/project_settings.html
@@ -155,6 +155,12 @@ h3.question-group-title {
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/poams';">
         <em class="glyphicon glyphicon-check"></em>&nbsp; POA&Ms</a>
       </button>
+      <button class="btn btn-sm btn-default" onclick="show_project_modal('{{ portfolio.id }}'); return false;" href="#">
+        <em class="glyphicon glyphicon-arrow-up"></em>&nbsp; Import Project</a>
+      </button>
+      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/export';">
+        <em class="glyphicon glyphicon-arrow-down"></em>&nbsp; Export project</a>
+      </button>
     {% endif %}
     {% if not project.is_account_project or project.is_deletable %}
       <button class="btn btn-sm btn-default" onclick="window.location = '{{project.get_absolute_url|escapejs}}/settings';">
