--- a/templates/controls/import_modal.html
+++ b/templates/controls/import_modal.html
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="project_modal_title">Select a Project</h4>
       </div>
-<form method="post" enctype="multipart/form-data" action="/systems/{{project.system.id}}/import">
+<form method="post" enctype="multipart/form-data" action="/systems/{{project.system.id}}/im ">
     {% csrf_token %}
     <input type="file" name="import_project_data">
     <p>Please select format of file.</p>
@@ -26,8 +26,6 @@
   function show_project_modal(id,callback) {
     var m = $('#project_modal');
     m.modal();
-    {#$("#edit_portfolio_submit").attr("href", "/portfolios/"+id+"/edit");#}
-    {#$("#delete_portfolio_submit").attr("href", "/portfolios/"+id+"/delete");#}
   }
 
 </script>
