Fix #1232, missing "part" field, Component's component statement form
Information system's component page in the controls statements tab
was missing the "part" field and incorrectly displaying the "remarks" field.
Correct the HTML issues form is rendered the same as on Control's
component statement form.

--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -253,7 +253,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="remarks">Remarks</label>
-                                                    <textarea style="min-height:70px; overflow-y: scroll;" class="form-control" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" cols="50">{{ smt.remarks }}</textarea>
+                                                    <textarea class="form-control systems-element-form-remarks" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" cols="50">{{ smt.remarks }}</textarea>
                                                 </div>
                                                 <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
                                                 <input type="hidden" id="system_id" name="system_id" value="{{ system.id }}">
