--- a/templates/systems/element_detail_tabs.html
+++ b/templates/systems/element_detail_tabs.html
@@ -186,46 +186,82 @@
 
                   <div class="form-group">
                     <input type="hidden" id="smt_id" name="smt_id" value="{{ smt.id }}">
-                    <label for="statement">Statement</label>
-                    <textarea class="form-control systems-element-statement" id="body_{{ forloop.counter }}" name="body" placeholder="How component contributes to control"  cols="50">{{ smt.body }}</textarea>
-                  </div>
-                  <div class="form-group">
-                    <label for="status">Status</label>
-                    <select class="form-control systems-element-form-status" id="status_{{ forloop.counter }}" name="status">
-                    <option value='' {% if '' == smt.status %}selected="selected"{% endif %}></option>
-                    <option value='Not Implemented' {% if 'Not Implemented' == smt.status %}selected="selected"{% endif %}>Not Implemented</option>
-                    <option value='Planned' {% if 'Planned' == smt.status %}selected="selected"{% endif %}>Planned</option>
-                    <option value='Partially Implemented' {% if 'Partially Implemented' == smt.status %}selected="selected"{% endif %}>Partially Implemented</option>
-                    <option value='Implemented' {% if 'Implemented' == smt.status %}selected="selected"{% endif %}>Implemented</option>
-                    <option value='Unknown' {% if 'Unknown' == smt.status %}selected="selected"{% endif %}>Unknown</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <label for="remarks">Remarks</label>
-                    <textarea class="" class="form-control systems-element-form-remarks" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" cols="50">{{ smt.remarks }}</textarea>
-                  </div>
+                    <label for="statement">What is the solution and how is it implemented?
+                        {% if smt.prototype_synched %}
+                            <span id="diff_alert_{{ forloop.counter }}"><a href="#diff_{{ forloop.counter }}" class="" data-toggle="collapse" style="text-decoration: none;font-weight: normal; font-size: 9pt; color: green;"><span
+                                    class="glyphicon glyphicon-check"></span> Same as certified</a></span>
+                        {% else %}
+                            <span id="diff_alert_{{ forloop.counter }}"><a href="#diff_{{ forloop.counter }}" class="" data-toggle="collapse" style="text-decoration: none;font-weight: normal; font-size: 9pt; color: firebrick;"><span
+                                    class="glyphicon glyphicon-alert"></span> Differs from certified</a></span>
+                        {% endif %}
+                        <div id="diff_{{ forloop.counter }}" class="collapse smt_diff" style="font-size:10pt; font-weight: normal; margin-top: 12px;color: #666;">
+                            <div style="text-decoration: underline;font-weight: bold;">
+                                Certified statement for {{ smt.producer_element.name }} {{ control.id_display|upper }} is:
+                            </div>
+                            <div id="prototype_body_display_{{ forloop.counter }}">{{ smt.prototype.body|linebreaks }}</div>
+                            <div id="prototype_body_{{ forloop.counter }}" style="display: none;">{{ smt.prototype.body }}</div>
+                            <br/>
+                            <div style="text-decoration: underline;font-weight: bold;">
+                                Comparison of current statement to certified statement:
+                            </div>
+                            <div id="diff_comparison_{{ forloop.counter }}">
+                                {% if smt.prototype_synched %}Texts are identical.{% else %}{{ smt.diff_prototype_prettyHtml|safe }}{% endif %}
+                            </div>
+                            <br/>
+                            <div style="text-decoration: underline;font-weight: bold;">
+                                {% if not smt.prototype_synched %}Options:{% endif %}
+                            </div>
+                            <div>
+                                {% if not smt.prototype_synched %}
+                                    <button type="button" name="overwrite" value="overwrite" class="btn btn-xs btn-primary" onclick="copy_smt_prototype('{{ forloop.counter }}');return false;">Overwrite current statement</button>
 
+                                    {% if user.is_superuser %}
+                                        <button type="button" name="update_certified" value="update_certified" class="btn btn-xs btn-danger" onclick="update_smt_prototype('{{ forloop.counter }}');return false;">Update certified text</button>
+                                    {% endif %}
+                                {% endif %}
+                            </div>
+                        </div>
+                    </label>
+                    <textarea class="form-control systems-element-statement" id="body_{{ forloop.counter }}" name="body" placeholder="How component contributes to control" cols="50">{{ smt.body }}</textarea>
+                  </div>
+                  <div class="form-group">
+                      <label for="statement">Part</label>
+                      <input type="text" class="form-control" id="pid" name="pid" placeholder="Statement part (e.g., h)" value="{{ smt.pid }}" style="width:180px;">
+                  </div>
+                  <div class="form-group">
+                      <label for="status">Status</label>
+                      <select class=form-control id="status_{{ forloop.counter }}" name="status" style="width:180px;">
+                          <option value='' {% if '' == smt.status %}selected="selected"{% endif %}></option>
+                          <option value='Not Implemented' {% if 'Not Implemented' == smt.status %}selected="selected"{% endif %}>Not Implemented</option>
+                          <option value='Planned' {% if 'Planned' == smt.status %}selected="selected"{% endif %}>Planned</option>
+                          <option value='Partially Implemented' {% if 'Partially Implemented' == smt.status %}selected="selected"{% endif %}>Partially Implemented</option>
+                          <option value='Implemented' {% if 'Implemented' == smt.status %}selected="selected"{% endif %}>Implemented</option>
+                          <option value='Unknown' {% if 'Unknown' == smt.status %}selected="selected"{% endif %}>Unknown</option>
+                      </select>
+                  </div>
+                  <div class="form-group">
+                      <label for="remarks">Remarks</label>
+                      <textarea class="form-control systems-element-form-remarks" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" cols="50">{{ smt.remarks }}</textarea>
+                  </div>
                   <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
                   <input type="hidden" id="system_id" name="system_id" value="{{ system.id }}">
                   <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
                   <input type="hidden" id="sid_class" name="sid_class" value="{{ smt.sid_class }}">
                   <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
-
-                <div class="modal-footer">
-                  <div id="success-msg-smt_{{ forloop.counter }}" class="systems-element-modal-footer"></div>
-                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="false" aria-controls="document-{{ forloop.counter }}-body">Close</a>&nbsp;
-                  <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_{{ forloop.counter }}');return false;">Delete</button>
-                  <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_{{ forloop.counter }}');return false;">Save</button>
-                </div>
-
-                </form>
-              </div>
-
-                </div>
-              </div>
-            </div>
-            {% endfor %}
-          </div><!--/smt-list-->
+                  <div class="modal-footer">
+                    <!-- CURRENT LOCATION DEBUG -->
+                      <div id="success-msg-smt_{{ forloop.counter }}" class="systems-element-modal-footer"></div>
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="false" aria-controls="document-{{ forloop.counter }}-body">Close</a>&nbsp;
+                      <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_{{ forloop.counter }}');return false;">Delete</button>
+                      <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_{{ forloop.counter }}');return false;">Save</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+  </div>
+  {% endfor %}
+</div><!--/smt-list-->
 
           <div><h3><button type="submit" id="new_component_statement" class="small btn btn-md btn-success systems-element-button" onclick="add_smt()">Add component statement</button></h3></div>
 
