Added tests for tracking and deleting imports.

--- a/templates/components/import_records.html
+++ b/templates/components/import_records.html
@@ -39,7 +39,7 @@
   {% for import, components in import_components.items %}
     <div id="tab-content" class="row row-control" style="">
       <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-        <a href="/controls/import_records/{{ import.id }}/details">{{ import.created }}</a>
+        <a class="import_record_detail_link" href="/controls/import_records/{{ import.id }}/details">{{ import.created }}</a>
       </div>
       <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
         {{ components|length }} components
