--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -34,8 +34,8 @@ Remove contextbar from top of page
         <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#" class=" btn
         btn-success">Start a project</a>
         {% if can_change_portfolio %}
-            <a id="manage-portfolio" onclick="show_manage_portfolio_modal('{{portfolio.id}}'); return false;" href="#" class=" btn
-            btn-success">Manage Portfolio</a>
+            <a id="manage-portfolio" onclick="show_manage_portfolio_modal('{{ portfolio.id }}'); return false;" href="#"
+               class=" btn btn-success">Manage Portfolio</a>
         {% endif %}
         {% if can_invite_to_portfolio %}
             <a href="#" onclick="invite_user_into_portfolio(); return false;" id="grant-portfolio-access"
