--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -8,7 +8,7 @@
   <div class="col-xs-10 col-md-5"><strong>Portfolio</strong></div>
   <div class="col-xs-6 col-sm-1"><strong>ID</strong></div>
   <div class="col-xs-6 col-sm-2"><strong>Role</strong></div>
-  <div class="col-xs-6 col-sm-2"><strong>Manage</strong></div>{#  check for permission to change portfolio#}
+  <div class="col-xs-6 col-sm-2"><strong>Manage</strong></div>
   <div class="col-xs-12 col-md-2"><strong>Created</strong></div>
 </div>
 {% endif %}
@@ -18,7 +18,7 @@
 
     <div class="col-xs-10 col-md-5">
       <div>
-        <span class="glyphicon glyphicon-folder-close"></span>&nbsp;&nbsp;&nbsp;
+        <span class="glyphicon glyphicon-folder-close"></span>
         <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.title}}" class="portfolio-project-link">{{portfolio.title}}</a>
       </div>
     </div>
@@ -29,20 +29,20 @@
     {% if "can_grant_portfolio_owner_permission" in perms %}
     <div class="col-md-2">Owner</div>
         <div class="col-md-2">
-            <span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-pencil"></span>
             <a id="new-project" class="portfolio-project-link" onclick="show_manage_portfolio_modal('{{portfolio.id}}'); return false;" href="#">Manage Portfolio</a>
         </div>
     {% elif "change_portfolio" in perms%}
     <div class="col-md-2">Portfolio Member</div>
     <div class="col-md-2">
         <div class="col-md-2">
-            <span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-pencil"></span>
             <a id="new-project" class="portfolio-project-link" onclick="show_manage_portfolio_modal('{{portfolio.id}}'); return false;" href="#">Manage Portfolio</a>
         </div>
     {% else %}
     <div class="col-md-2">Project Member</div>
         <div class="col-md-2">
-            <span class="glyphicon glyphicon-minus"></span>&nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-minus"></span>
         No Permission
         </div>
     {% endif %}
