clean up manage portfolio modal and send portfolio title

--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -30,14 +30,14 @@
     <div class="col-md-2">Owner</div>
         <div class="col-md-2">
             <span class="glyphicon glyphicon-pencil"></span>
-            <a id="new-project" class="portfolio-project-link" onclick="show_manage_portfolio_modal('{{portfolio.id}}'); return false;" href="#">Manage Portfolio</a>
+            <a id="new-project" class="portfolio-project-link" onclick="show_manage_portfolio_modal('{{portfolio.id}}', '{{ portfolio_title }}'); return false;" href="#">Manage Portfolio</a>
         </div>
     {% elif "change_portfolio" in perms%}
     <div class="col-md-2">Portfolio Member</div>
     <div class="col-md-2">
         <div class="col-md-2">
             <span class="glyphicon glyphicon-pencil"></span>
-            <a id="new-project" class="portfolio-project-link" onclick="show_manage_portfolio_modal('{{portfolio.id}}'); return false;" href="#">Manage Portfolio</a>
+            <a id="new-project" class="portfolio-project-link" onclick="show_manage_portfolio_modal('{{portfolio.id}}', '{{ portfolio_title }}'); return false;" href="#">Manage Portfolio</a>
         </div>
     {% else %}
     <div class="col-md-2">Project Member</div>
