--- a/templates/portfolios/edit_form.html
+++ b/templates/portfolios/edit_form.html
@@ -14,16 +14,15 @@ Edit Portfolio
             <p>Portfolios allow you to organize and manage related projects. Members of a portfolio can access all of
                 its unrestricted projects.</p>
         </div>
-
+{#       TODO: disambiguate error and help text #}
         <div class="col-md-9 portfolio-org-col ">
             <div class="well">
                 <form method="post">
                     {% csrf_token %}
                     {% bootstrap_form form %}
-                    <p><button type="submit" id="create-portfolio-button" class="btn btn-success">Update &raquo;</button>
+                    <p><button type="submit" id="create-portfolio-button" class="btn btn-success">Update</button>
                         <a type="button" class="btn btn-default" href="/portfolios">Cancel</a>
                     </p>
-                    
                 </form>
             </div>
         </div>
