--- a/templates/portfolios/manage_portfolio_modal.html
+++ b/templates/portfolios/manage_portfolio_modal.html
@@ -3,14 +3,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="manage_portfolio_modal_title">Select a Portfolio</h4>
+        <h2 class="modal-title" id="manage_portfolio_modal_title">Portfolio</h2>
       </div>
       <form role="form" method="POST">
           {% csrf_token %}
-        <div class="modal-body">
-          <label for="id_portfolio">{{ project_form.portfolio.label }}</label>:&nbsp;
-          {{ project_form.portfolio }}
-         </div>
          <div class="modal-footer">
            <a id="edit_portfolio_submit" class="btn btn-success btn-submit" type="submit">Edit</a>
            <a id="delete_portfolio_submit"  class="btn btn-danger btn-submit confirm-delete" type="submit" onclick="return confirm('Are you sure you want to delete this?')">Delete Portfolio</a>
@@ -24,9 +20,10 @@
 
 {% block scripts %}
 <script>
-  function show_manage_portfolio_modal(id,callback) {
+  function show_manage_portfolio_modal(id,title) {
     var m = $('#manage_portfolio_modal');
     m.modal();
+    $("#manage_portfolio_modal_title").text(title)
     $("#edit_portfolio_submit").attr("href", "/portfolios/"+id+"/edit");
     $("#delete_portfolio_submit").attr("href", "/portfolios/"+id+"/delete");
   }
