--- a/templates/components/import_record_details.html
+++ b/templates/components/import_record_details.html
@@ -21,10 +21,11 @@
 <div class="portfolio-top">
   <div class="container">
     <div class="portfolio-main">
-      <a id="delete-import" class="btn btn-danger" href="/controls/import_records/{{ import_record.id }}/delete_confirm">Delete</a>
+      <a class="btn" href="{% url 'import_records' %}">&#171; Back to All Import Records</a>
     </div>
 
-    <h2 class="">Import Record: {{ import_record.created }}</h2>
+    <h2>Import Record: {{ import_record.id }}</h2>
+    <h3>{{ import_record.created }}</h3>
 
   {% if component_statements|length > 0 %}
     <p>This import includes {{ component_statements|length }} components{{ component|pluralize }}.</p>
@@ -32,21 +33,20 @@
     <p>This import did not include any components.</p>
   {% endif %}
 
-  <p>&nbsp;</p>
-
   <div id="tab-content" class="row rows-header" style="">
-    <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span style="font-size: 14pt; font-weight: bold;">Imported Components</div>
+    <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">Imported Component</div>
+    <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">Statements Imported</div>
   </div>
   {% for component, statements in component_statements.items %}
     <div id="tab-content" class="row row-control" style="">
       <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
         <a href="/controls/components/{{ component.id }}">{{ component.name }}</a>
       </div>
-      <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
-        {{ statements|length }} statements
-      </div>
+      <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">{{ statements|length }} statement{{ statements|pluralize }}</div>
     </div>
   {% endfor %}
+
+  <a id="delete-import" class="btn btn-danger" href="{% url 'confirm_import_record_delete' import_record.id %}">Delete</a>
 
   {{ block.super }}
 {% endblock %}
