send a project id to then get the specific project to export.

--- a/templates/project.html
+++ b/templates/project.html
@@ -158,7 +158,7 @@ h3.question-group-title {
       <button class="btn btn-sm btn-default" onclick="show_project_modal('{{ portfolio.id }}'); return false;" href="#">
         <em class="glyphicon glyphicon-arrow-up"></em>&nbsp; Import Project</a>
       </button>
-      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/export';">
+      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.id}}/export';">
         <em class="glyphicon glyphicon-arrow-down"></em>&nbsp; Export project</a>
       </button>
     {% endif %}
