--- a/templates/components/import_records.html
+++ b/templates/components/import_records.html
@@ -34,17 +34,19 @@
     <p>&nbsp;</p>
 
   <div id="tab-content" class="row rows-header" style="">
-    <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">Import Record ID</div>
-    <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">Date</div>
-    <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">Components</div>
+    <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">Import ID</div>
+    <div id="" class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">File Name</div>
+    <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">Date</div>
+    <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">Components</div>
   </div>
   {% for import, components in import_components.items %}
     <div id="tab-content" class="row row-control" style="">
-      <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+      <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
         <a class="import_record_detail_link" href="/controls/import_records/{{ import.id }}/details">{{ import.id }}</a>
       </div>
-      <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">{{ import.created }}</div>
-      <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">{{ components|length }}</div>
+      <div id="" class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">{{ import.name|default_if_none:"" }}</div>
+      <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">{{ import.created }}</div>
+      <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">{{ components|length }}</div>
     </div>
   {% endfor %}
 
