Fix control lookup for a few pages and applied css class btn-success to manage import records

--- a/templates/components/component_library.html
+++ b/templates/components/component_library.html
@@ -21,7 +21,7 @@
 <div class="portfolio-top">
   <div class="container">
     <div class="portfolio-main">
-      <a id="import_records_link" href="{% url 'import_records' %}" class="btn">Manage Import Records</a>
+      <a id="import_records_link" href="{% url 'import_records' %}" class="btn btn-success">Manage Import Records</a>
       <a id="component-new" href="{% url 'new_element' %}" class="btn btn-success">Create a Component</a>
       <a id="component-import-oscal" class="btn btn-success" onclick="show_import_component_modal(); return false;" href="#">Import OSCAL Component</a>
     </div>
