--- a/templates/controls/import_project_modal.html
+++ b/templates/controls/import_project_modal.html
@@ -1,34 +1,53 @@
-<div id="project_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="project_modal_title" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h2 class="modal-title" id="project_modal_title">Select a Project</h2>
-      </div>
-<form method="post" enctype="multipart/form-data" action="{% url 'project_import' project.id %}">
-    {% csrf_token %}
-    <input type="file" name="import_project_data"  onchange="attach_files(this.files)">
-    <p>Please select format of file.</p>
-    <select name="file-format" class="form-control my-3">
-        <option selected>Choose format...</option>
-        <option>CSV</option>
-        <option>JSON</option>
-      </select>
-    <button class="btn btn-primary" type="submit">Import</button>
-        <input type="checkbox" id="importcheck" name="importcheck" value="True">
-  <label for="importcheck">Import a new project</label>
-  </form>
-      </div>
+{% load static %}
+<div id="import_project_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="import_project_modal_title" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h2 class="modal-title" id="import_project_modal_title">Select a Project</h2>
+            </div>
+            <form id="project_import_form" action="{% url 'project_import' project.id %}" onsubmit="show_spinner();" role="form" method="POST">
+                {% csrf_token %}
+                <div class="modal-body">
+                    {{ import_project_form.file }}
+                    <br>
+                    <label for="{{ import_project_form.json_content.id_auto }}">{{ import_project_form.json_content.label }}:</label>
+                    <br>
+                    {{ import_project_form.json_content }}
+
+                    <div class="modal-footer">
+                        <input id="import_component_submit" class="btn btn-success btn-submit" type="submit" value="Import"/>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        {{ import_project_form.importcheck }}
+                        {{ import_project_form.importcheck.label }}
+                        <img id="import_loading_spinner" src="{% static "img/icons/spinner.gif" %}"/>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-  </div>
+</div>
 </div>
 
 {% block scripts %}
-<script>
-  function show_project_modal(id,callback) {
-    var m = $('#project_modal');
-    m.modal();
-  }
+    <script>
+        function show_import_project_modal(id, callback) {
+            var m = $('#import_project_modal');
+            $("#import_loading_spinner").hide();
+            m.modal();
+        }
 
-</script>
+        function fillJSONContent(file) {
+            filecontents = $('#{{import_project_form.file.auto_id}}').prop('files')[0];
+            var reader = new FileReader();
+            reader.readAsText(filecontents);
+            reader.onload = function (e) {
+                $('#{{import_project_form.json_content.auto_id}}').val(e.target.result);
+            };
+        }
+
+        function show_spinner() {
+            $("#import_loading_spinner").show();
+        }
+    </script>
 {% endblock %}
