--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -288,6 +288,10 @@ a#delete-import.btn {float: right; margin-top: 1em;}
 
 form #id_json_content { width: 100%; overflow: auto !important; } /* The !important is to fix a bug with textareas not allowing scrolling. */
 
+
+/* Import Form field*/
+form #id_appsource_path { width: 100%; overflow: auto !important; }
+
 /* org groups */
 
 .new-org-col { margin: 40px 0px 30px 0px; }
